--- a/final_project/css/style.css
+++ b/final_project/css/style.css
@@ -15,10 +15,13 @@ header {
 
 }
 
-nav {
+nav a {
 	
+	text-decoration: underline;
+	color: #000000;
 	font-family: 'Arial', sans-serif;
-	font-size: 14px;
+	font-size: 10px;
+	display: inline-block;
 }
 
 a {
