--- a/unit_9_final_project/css/style.css
+++ b/unit_9_final_project/css/style.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond');
+@import url('https://fonts.googleapis.com/css?family=Fauna+One');
+@import url('https://fonts.googleapis.com/css?family=Rokkitt:300');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,900');
 
 * {
@@ -14,21 +15,30 @@ body {
 }
 
 header {
-	font-family: 'Arial', sans-serif;
-	font-size: 24px;
-	text-align: center;
+	background-image: url(../img/Gradient.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-top: 1em;
+	height: 100vh;
+}
 
+nav {
+	float: right;
+	width: 200px;
 }
 
 nav a {
-	
-	text-decoration: underline;
-	text-align: right;
-	color: #000;
+	color: #fff;
 	font-weight: 300;
-	font-family: 'Roboto', sans-serif;	
-	font-size: 18px;
+	font-family: 'Work Sans', sans-serif;	
+	font-size: 14px;
 	display: inline-block;
+	padding-top: 26px;
+	text-decoration: none;
+}
+
+nav a:hover {
+	text-decoration: line-through;
 }
 
 a {
@@ -43,18 +53,26 @@ img {
 }
 
 h1 {
+	background-image: url(../img/gradient_map_white.png);
+	background-repeat: no-repeat;
+	background-size: 33.3% auto;
+	width: 100%;
+	background-position: top center;
+	padding-top: 430px;
 	font-weight: 500;
 	font-family: 'Work Sans', sans-serif;
 	text-align: center;
-	color: #FFF;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color: #FFAEC3;
+	font-size: 80px;
 }
 
 h2 {
-	position: absolute;
-	font-size: 72px;
-	top: 200px;
-	width: 100%;
 	color: #FFF;
+	font-size: 6em;
 	font-weight: 500;
 	font-family: 'Work Sans', sans-serif;
 	text-align: center;
@@ -67,19 +85,24 @@ h3, h4, h5	{
 }
 
 p {
-	font-family: 'Cormorant Garamond', serif;
+	font-family: 'Rokkitt', serif;
 	color: #000;
 	font-size: 14px;
 	line-height: 1em;
 }
 
+img {
+	background-blend-mode: soft-light;
+	background-color: pink;
+}
+
 /* Inset Rule */
 
-hr.style-six {
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+hr.style1 {
+    border-width: thin;
+    color: #b2dfdb;
+    border-style: solid;
+
 }
 
 footer {
@@ -92,16 +115,65 @@ footer {
 	font-size: 16px;
 }
 
-.image {
+/*.main-image {
+    width: 100%;
+	background-size: cover;
+    object-fit: none;
+    background-position: center;
+}*/
+
+/*#map {
+	background-image: url(http://imgur.com/fCERyhX);
+}*/
+
+#kona-image {
+	background-image: url(http://i.imgur.com/5bWB9Ad.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#hilo-image {
+	background-image: url(http://i.imgur.com/5bWB9Ad.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.image1 {
 	position: relative;
 	width: 100%;
 }
 
+/*.image1 figcaption {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}*/
+.image2 {
+	position: relative;
+	width: 100%;
+}
+
+.image2 figcaption {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
 .two-columns .column {
 	width: 50%;
 	float: left;
-	padding: 2em;
+	padding: 2em;	
+	text-align: center;
 }
 
 .three-columns:after,
@@ -122,20 +194,105 @@ footer {
 .long-column {
 	padding-left: 2em;
 	padding-right: 2em;
+/*	text-align: center;
+*/
+}
+
+/*.second-nav .column {
 	text-align: center;
+	float: left;
+	display: block;
+}*/
+
+/*.intro-column1 figcaption {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-#intro-column1 {
-	background-color: #FFAEC3;
-	column-fill: auto;
+.intro-column2 figcaption {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}*/
+
+.hamburger-menu {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: none;
 }
 
-#intro-column2 {
-	background-color: #FFAEC3;
-	column-fill: auto;
+.bar,
+.bar:after,
+.bar:before {
+  width: 100%;
+  height: 5px;
+}
+
+.bar {
+  position: relative;
+  transform: translateY(10px);
+  background: white;
+  transition: all 0ms 300ms;
+}
+.bar.animate {
+  background: rgba(255, 255, 255, 0);
+}
+
+.bar:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  background: white;
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 10px;
+  background: white;
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar.animate:after {
+  top: 0;
+  transform: rotate(45deg);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar.animate:before {
+  bottom: 0;
+  transform: rotate(-45deg);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 
+@media screen and (max-width: 568px) {
+	.hamburger-menu {
+		display: block;
+	}
+	nav {
+		display: none;
+	}
+	.menuactive nav {
+		display: block;
+	}
+}
+
+/*.main-photo {
+    background-image: url(../images/hero-index.jpg);
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    object-fit: none;
+    background-position: center;
+}*/
 
 
 
